--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # production
 /build
 /built-lambda
+/lambda
 
 /.netlify
 
@@ -22,3 +23,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Local Netlify folder
+.netlify
