--- a/package.json
+++ b/package.json
@@ -2,15 +2,10 @@
   "name": "create-react-app-lambda",
   "version": "0.5.0",
   "private": true,
-  "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.0.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "start:front": "netlify dev",
+    "start:api": "netlify-lambda serve src/lambda",
+    "start:react": "react-scripts start",
     "build": "run-p build:**",
     "build:app": "react-scripts build",
     "build:lambda": "netlify-lambda build src/lambda",
@@ -26,6 +21,13 @@
     "not ie <= 11",
     "not op_mini all"
   ],
+  "dependencies": {
+    "axios": "^0.19.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.0.1"
+  },
   "devDependencies": {
     "netlify-lambda": "^1.6.3",
     "npm-run-all": "^4.1.5"
